--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@ntnbrtnkv/ga4node",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "An Open-Source Google Analytics 4 Client-Side Protocol Implementation",
   "main": "dist/ga4mp.min.js",
   "module": "dist/ga4mp.esm.min.js",
   "browser": "dist/ga4mp.min.js",
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
+    "jest": "^26.6.3",
+    "rollup": "^3.7.1",
+    "rollup-plugin-license": "^3.0.1"
   },
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
@@ -25,7 +34,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/analytics-debugger/ga4mp"
+    "url": "https://github.com/ntnbrtnkv/ga4node"
   },
   "keywords": [
     "google",
@@ -45,7 +54,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/analytics-debugger/ga4mp/issues"
+    "url": "https://github.com/ntnbrtnkv/ga4node/issues"
   },
   "homepage": "https://www.thyngster.com",
   "funding": {
@@ -53,15 +62,6 @@
     "url": "https://github.com/sponsors/thyngster"
   },
   "dependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-transform-object-assign": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.2.0",
-    "debug": "^4.3.4",
-    "rollup": "^3.7.1",
-    "rollup-plugin-license": "^3.0.1"
+    "debug": "^4.3.4"
   }
 }
